--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "vue": "^2.6.11",
+    "vue-cli": "^2.9.6",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12"
   }
